# fast_zero

./: .coverage  database.db  pyproject.toml
fast_zero/: app.py
migrations/: env.py
migrations/versions/: f7a24d0ad4c4_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
